--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 
 <body>
   <header>
-    <main>
-      <h3>Alvy Rahman Masum</h3>
-    </main>
+    <nav>
+      <h3>Alvy</h3>
+      <ul>
+        <li>Portfolio</li>
+        <li>BLog</li>
+        <li><button>Hire Me</button></li>
+      </ul>
+    </nav>
 
   </header>
 
