--- a/index.html
+++ b/index.html
@@ -5,21 +5,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alvy Dev Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css">
 
 </head>
 
-<body>
-  <header>
+<body class="open-sans-normal">
+  <header class="header secondary-bg">
     <nav>
-      <h3>Alvy</h3>
+      <h3 class="nav-title">Al<span class="text-primary">v</span>y</h3>
       <ul>
-        <li>Portfolio</li>
-        <li>BLog</li>
-        <li><button>Hire Me</button></li>
+        <li class="dark-2"><a href="">Portfolio</a></li>
+        <li class="dark-2"><a href="">Blog</a></li>
+        <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
       </ul>
     </nav>
+    <div class="banner">
+      <div class="banner-content">
+        <h4 class="banner-greetings dark-2">Hi,I am</h4>
+        <h1 class="banner-title">Alvy Rahman Masum</h1>
+        <p class="banner-description">
+          Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved
+          moments.
+        </p>
+        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary">Contact</button>
+      </div>
+      <img class="banner-picture" src="images/hardy.png" alt="">
+    </div>
 
   </header>
+  <main>
+    <section class="about secondary-bg">
+      <h3 class="section-title">About Me</h3>
+      <p class="section-description">
+        I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites
+        that
+        provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with
+        me.
+        Delivering work within time and budget which meets clients requirements in our mata.
+      </p>
+
+
+    </section>
+  </main>
 
 </body>
 
